[project]
name = "pjecz-libra-cli"
version = "0.1.0"
description = "CLI (Command Line Interface) para actualizar las bases de datos a partir de una API en el servidor Neptuno."
authors = [
    {name = "Guillermo Valdes",email = "guillermo@movimientolibre.com"}
]
license = {text = "AGPL3"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "pjecz_libra_cli.main:cli"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.1.0"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
